FIX scrollbars

--- a/src/components/board/ordersList/ordersList.module.scss
+++ b/src/components/board/ordersList/ordersList.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
-  padding-right: 10px;
+  padding-right: 0px;
   margin-bottom: 9px;
   .titles_wrapper {
     position: sticky;
