--- a/src/components/board/statusBar/statusBar.module.scss
+++ b/src/components/board/statusBar/statusBar.module.scss
@@ -33,7 +33,7 @@
     }
   }
   .status_bar_item:nth-child(3) {
-    margin-right: 10px;
+    margin-right: 16px;
     span {
       color: blueviolet;
     }
